ingress/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ingress
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ml-pipeline-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-pipeline-ui
                port:
                  number: 80
    - host: streamlit-news-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-news-app
                port:
                  number: 8501
    - host: bentoml-news.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bentoml-news
                port:
                  number: 3000
